@@ -1,2 +1,2 @@
 graphicdir = $(datadir)/ivan/Graphics/
-graphic_DATA = Char.pcx Cursor.pcx Font.pcx FOW.pcx Humanoid.pcx Item.pcx LTerrain.pcx Symbol.pcx WTerrain.pcx
+graphic_DATA = Char.pcx Cursor.pcx Font.pcx FOW.pcx Humanoid.pcx Item.pcx LTerrain.pcx Menu.pcx Symbol.pcx WTerrain.pcx
