@@ -1,3 +1,7 @@
+2002-05-01  Heikki Sairanen  <heikki.sairanen@phpoint.net>
+
+	* Silhouette added to humanoids
+
 May 1 2002 Timo Kiviluoto <sonor@phpoint.fi>
 
 	* Warning corrections
